<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button6"
        android:layout_width="204dp"
        android:layout_height="86dp"
        android:background="#4CAF50"
        android:onClick="connect"
        android:text="@string/connect"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="204dp"
        android:layout_height="86dp"
        android:background="#2196F3"
        android:onClick="showToast"
        android:text="@string/search"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button6" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="174dp"
        android:layout_height="120dp"
        android:contentDescription="@string/p1"
        android:onClick="showToast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="174dp"
        android:layout_height="120dp"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/p2"
        android:onClick="showToast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="174dp"
        android:layout_height="120dp"
        android:layout_marginTop="240dp"
        android:contentDescription="@string/p3"
        android:onClick="showToast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="174dp"
        android:layout_height="120dp"
        android:layout_marginTop="360dp"
        android:contentDescription="@string/p4"
        android:onClick="showToast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="174dp"
        android:layout_height="120dp"
        android:layout_marginTop="480dp"
        android:contentDescription="@string/p5"
        android:onClick="showToast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="165dp"
        android:layout_height="57dp"
        android:layout_marginTop="164dp"
        android:onClick="showToast"
        android:text="@string/person"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="165dp"
        android:layout_height="57dp"
        android:layout_marginTop="280dp"
        android:onClick="showToast"
        android:text="@string/person"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="165dp"
        android:layout_height="57dp"
        android:layout_marginTop="404dp"
        android:onClick="showToast"
        android:text="@string/person"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="165dp"
        android:layout_height="57dp"
        android:layout_marginTop="524dp"
        android:onClick="showToast"
        android:text="@string/person"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="165dp"
        android:layout_height="57dp"
        android:layout_marginTop="40dp"
        android:onClick="showToast"
        android:text="@string/person"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>